--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,7 @@ jobs:
       uses: kitabisa/sonarqube-action@v1.2.0
       with: 
         host: ${{ secrets.SONARQUBE_HOST }}
+        login: ${{ secrets.SONARQUBE_TOKEN }}
        
     - name: 4-Uploading Artifacts
       uses: actions/upload-artifact@v2
