--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,9 +27,15 @@ jobs:
       run: |
         mvn -B package --file pom.xml
         mkdir staging && cp target/*.jar staging
+        
+    - name: 4-Analyze with SonarCloud
+      uses: sonarsource/sonarcloud-github-action@v1.3
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        
        
-    - name: 4-Uploading Artifacts
+    - name: 5-Uploading Artifacts
       uses: actions/upload-artifact@v2
       with: 
          name: github-actions-artifact
