--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<pluginGroups>
+    <pluginGroup>
+      org.sonarsource.scanner.maven
+    </pluginGroup>
+  </pluginGroups>
 	<properties>
    <maven.compiler.source>6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
