--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,6 +15,8 @@ jobs:
     steps: 
     - name: 1-Checkout main branch
       uses: actions/checkout@v2
+      with: 
+        fetch-depth: 0 
     
     
     - name: 2-Set-up JDK version
