--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         mvn -B package --file pom.xml
         mkdir staging && cp target/*.jar staging
+        mvn sonar:sonar
         
     - name: 4-Analyze with SonarCloud
       uses: sonarsource/sonarcloud-github-action@master
