--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 # Github organization linked to sonarcloud
-sonar.organization=remast
+sonar.organization=Shashank1518
 
 # Project key from sonarcloud dashboard for Github Action,
 # otherwise pick a project key you like
-sonar.projectKey=de.red6:service_sonar
+sonar.projectKey=de.red6:rock-paper-scissors
 
-sonar.projectName=service_sonar
+sonar.projectName=rock-paper-scissors
 sonar.projectVersion=1.0.0
 
 # Not needed for Github Action
