--- a/.github/workflows/maven-sonar.yml
+++ b/.github/workflows/maven-sonar.yml
@@ -37,7 +37,13 @@ jobs:
     steps:
       - name: Clone Repository
         uses: actions/checkout@master
-
+        
+      - name: Download code coverage results
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage-report
+          path: bin
+          
       - name: 4-Analyze with SonarCloud
         uses: sonarsource/sonarcloud-github-action@master
         env:
